Bug 1933479 - Add tab close button on hover to vertical tabs when sidebar is collapsed r=desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,nsharpley,emilio,dao
Differential Revision: https://phabricator.services.mozilla.com/D232561

UltraBlame original commit: 4b7b61de1b1659658d9ed0ee1e514ef2b3f15b20

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -770,6 +770,59 @@ color
 :
 transparent
 ;
+-
+-
+tab
+-
+attention
+-
+dot
+-
+position
+-
+x
+:
+calc
+(
+50
+%
++
+11px
+)
+;
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+-
+-
+tab
+-
+attention
+-
+dot
+-
+position
+-
+x
+:
+calc
+(
+50
+%
+-
+11px
+)
+;
+}
 media
 (
 prefers
@@ -2319,6 +2372,10 @@ tab
 -
 content
 {
+position
+:
+relative
+;
 padding
 :
 0
@@ -4139,6 +4196,22 @@ padding
 :
 2px
 ;
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+vertical
+]
+&
+{
+top
+:
+7px
+;
+}
 &
 [
 crashed
@@ -4968,6 +5041,14 @@ height
 :
 24px
 ;
+box
+-
+sizing
+:
+border
+-
+box
+;
 padding
 :
 var
@@ -4998,11 +5079,7 @@ border
 radius
 )
 ;
-list
--
-style
--
-image
+content
 :
 url
 (
@@ -6305,8 +6382,28 @@ position
 -
 y
 :
-bottom
-4px
+6px
+;
+background
+-
+position
+-
+x
+:
+var
+(
+-
+-
+tab
+-
+attention
+-
+dot
+-
+position
+-
+x
+)
 ;
 }
 }
@@ -10714,8 +10811,16 @@ tabbrowser
 tab
 {
 padding
+-
+inline
 :
 0
+;
+padding
+-
+block
+:
+2px
 ;
 &
 [
@@ -10764,6 +10869,12 @@ tab
 label
 -
 container
+{
+display
+:
+none
+;
+}
 .
 tab
 -
@@ -10771,10 +10882,356 @@ close
 -
 button
 {
+opacity
+:
+0
+;
+width
+:
+16px
+;
+height
+:
+16px
+;
+padding
+:
+4px
+;
+margin
+:
+0
+;
+fill
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+textcolor
+)
+;
+/
+*
+We
+want
+to
+make
+this
+look
+like
+the
+selected
+tab
+but
+fully
+opaque
+.
+For
+that
+*
+we
+build
+a
+stack
+of
+-
+-
+lwt
+-
+accent
+-
+color
+(
+guaranteed
+opaque
+)
+then
+*
+-
+-
+toolbox
+-
+bgcolor
+then
+-
+-
+tab
+-
+selected
+-
+bgcolor
+.
+*
+*
+We
+rely
+on
+at
+least
+one
+of
+-
+-
+toolbox
+-
+bgcolor
+/
+-
+-
+tab
+-
+selected
+-
+bgcolor
+*
+being
+opaque
+on
+the
+system
+themes
+so
+even
+though
+-
+-
+lwt
+-
+accent
+-
+color
+is
+*
+not
+set
+there
+it
+ends
+up
+working
+out
+because
+we
+never
+see
+it
+through
+.
+*
+/
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+accent
+-
+color
+)
+;
+background
+-
+image
+:
+linear
+-
+gradient
+(
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+)
+linear
+-
+gradient
+(
+var
+(
+-
+-
+toolbox
+-
+bgcolor
+)
+)
+;
+color
+-
+scheme
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+color
+-
+scheme
+)
+;
+outline
+-
+color
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+outline
+-
+color
+)
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+tab
+-
+selected
+-
+shadow
+)
+;
+border
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+circle
+)
+;
 display
 :
-none
+block
 ;
+position
+:
+absolute
+;
+inset
+:
+auto
+;
+top
+:
+-
+1px
+;
+inset
+-
+inline
+-
+start
+:
+2px
+;
+.
+browser
+-
+toolbox
+-
+background
+:
+-
+moz
+-
+window
+-
+inactive
+&
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+)
+linear
+-
+gradient
+(
+var
+(
+-
+-
+toolbox
+-
+bgcolor
+-
+inactive
+)
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+is
+(
+[
+selected
+]
+:
+hover
+)
+&
+{
+opacity
+:
+1
+;
+}
 }
 }
 &
